[package]
name = "urltemplate"
version = "0.1.5"
authors = ["Vladimir Ignatev <ya.na.pochte@gmail.com>"]
edition = "2018"

description = "Lightweight URL templates. Master URLs with placeholders!"
license = "MIT"

keywords = ["url", "template", "string"]
categories = ["parser-implementations", "web-programming", "encoding"]

homepage = "https://github.com/vladignatyev/rust-urltemplate"
repository = "https://github.com/vladignatyev/rust-urltemplate.git"
documentation = "https://docs.rs/urltemplate/0.1.0/urltemplate/"
readme = "README.md"

[lib]
name = "urltemplate"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
url = "1.7.2"

[dev-dependencies]
criterion = "0.2.9"
serde = "1.0.86"
serde_derive = "1.0"
serde_json = "1.0"


[[bench]]
name = "simple"
harness = false
